--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <array name="type">
+        <item>Phrase</item>
+        <item>Alphabet</item>
+        <item>Number</item>
+    </array>
 </resources>
